feat(time): new component 'time'

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="app-grid">
   <div class="app-column"><app-card cardTitle="Climate"></app-card></div>
   <div class="app-column app-column--no-padding">
-    <app-card cardTitle="Time"></app-card>
+    <app-card cardTitle="Time"><app-time></app-time></app-card>
     <app-card cardTitle="Shopping list"></app-card>
   </div>
   <div class="app-column">
