feat(nav-menu): new component nav-menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div class="app-grid">
-  <div class="app-column">
-    <app-card cardTitle="Time"><app-time></app-time></app-card>
+  <div>
+    <app-nav-menu></app-nav-menu>
   </div>
+  <div class="app-column"><app-card cardTitle="Placeholder"></app-card></div>
   <div class="app-column app-column--no-padding">
     <app-card cardTitle="Climate"></app-card>
   </div>
