--- a/src/app/components/time/time.component.css
+++ b/src/app/components/time/time.component.css
@@ -1,16 +1,17 @@
 .time-container {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .time-clock {
-    font-size: 2rem;
-    font-weight: 600;
-    padding: 0 0 0.25rem;
-  }
-  
-  .time-date {
-    font-size: 0.75rem;
-  }
-  
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.time-clock {
+  font-size: 2rem;
+  padding: 0 0 0.25rem;
+  text-align: center;
+  width: 2.5rem;
+}
+
+.time-date {
+  font-size: 0.75rem;
+}
