Feat: Add routing for navigation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,5 @@
   <div>
     <app-nav-menu></app-nav-menu>
   </div>
-  <div class="app-column"><app-card cardTitle="Placeholder"></app-card></div>
-  <div class="app-column app-column--no-padding">
-    <app-card cardTitle="Climate"></app-card>
-  </div>
-  <div class="app-column">
-    <app-card cardTitle="Lights"></app-card>
-    <app-card cardTitle="Robot vaccuum"></app-card>
-  </div>
+  <router-outlet></router-outlet>
 </div>
