--- a/src/app/components/nav-menu/nav-menu.component.html
+++ b/src/app/components/nav-menu/nav-menu.component.html
@@ -1,7 +1,7 @@
 <div class="nav-menu-container">
   <app-time></app-time>
-  <a><img src="../../../assets/house-solid.svg" width="24" /></a>
-  <a><img src="../../../assets/basket-shopping-solid.svg" width="24" /></a>
-  <a><img src="../../../assets/utensils-solid.svg" width="24" /></a>
-  <a><img src="../../../assets/calendar-day-solid.svg" width="24" /></a>
+  <a routerLink="/" routerLinkActive="active"><img src="../../../assets/house-solid.svg" width="24" /></a>
+  <a routerLink="/shoppinglist" routerLinkActive="active"><img src="../../../assets/basket-shopping-solid.svg" width="24" /></a>
+  <a routerLink="/food" routerLinkActive="active"><img src="../../../assets/utensils-solid.svg" width="24" /></a>
+  <a routerLink="/calendar" routerLinkActive="active"><img src="../../../assets/calendar-day-solid.svg" width="24" /></a>
 </div>
