--- a/src/app/components/nav-menu/nav-menu.component.html
+++ b/src/app/components/nav-menu/nav-menu.component.html
@@ -1,6 +1,6 @@
 <div class="nav-menu-container">
   <app-time></app-time>
-  <a routerLink="/" routerLinkActive="active"><img src="../../../assets/house-solid.svg" width="24" /></a>
+  <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><img src="../../../assets/house-solid.svg" width="24" /></a>
   <a routerLink="/shoppinglist" routerLinkActive="active"><img src="../../../assets/basket-shopping-solid.svg" width="24" /></a>
   <a routerLink="/food" routerLinkActive="active"><img src="../../../assets/utensils-solid.svg" width="24" /></a>
   <a routerLink="/calendar" routerLinkActive="active"><img src="../../../assets/calendar-day-solid.svg" width="24" /></a>
