--- a/src/app/components/views/home/home.component.html
+++ b/src/app/components/views/home/home.component.html
@@ -1,10 +1,9 @@
-<div class="app-column">
-  <app-card cardTitle="Placeholder"></app-card>
+<div class="home-col-1">
+  <app-card cardTitle="Climate" class="home-col-1-card-1"></app-card>
+  <app-card cardTitle="Placeholder" class="home-col-1-card-2"></app-card>
+  <app-card cardTitle="Placeholder" class="home-col-1-card-3"></app-card>
 </div>
-<div class="app-column app-column--no-padding">
-  <app-card cardTitle="Climate"></app-card>
-</div>
-<div class="app-column">
+<div class="home-col-2">
   <app-card cardTitle="Lights"></app-card>
   <app-card cardTitle="Robot vaccuum"></app-card>
 </div>
