--- a/src/app/components/views/home/home.component.css
+++ b/src/app/components/views/home/home.component.css
@@ -1,14 +1,33 @@
-.app-grid {
-  align-items: stretch;
-  display: flex;
+:host {
+  display: grid;
+  gap: 1rem;
+  grid-template: 1fr / repeat(3, 1fr);
   height: 100%;
-  justify-content: space-between;
-}
-
-.app-column {
+  margin-right: 1rem;
   width: 100%;
 }
 
-.app-column.app-column--no-padding {
-  padding: 0;
+.home-col-1 {
+  display: grid;
+  gap: 1rem;
+  grid-area: 1 / 1 / 1 / 3;
+  grid-template: repeat(5, 1fr) / repeat(2, 1fr);
+}
+
+.home-col-2 {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.home-col-1-card-1 {
+  grid-area: 1 / 1 / 4 / 2;
+}
+
+.home-col-1-card-2 {
+  grid-area: 1 / 2 / 4 / 3;
+}
+
+.home-col-1-card-3 {
+  grid-area: 4 / 1 / 6 / 3;
 }
