feat(meal-plan-day): new component meal-plan-day

--- a/src/app/components/meal-plan/meal-plan.component.html
+++ b/src/app/components/meal-plan/meal-plan.component.html
@@ -1,1 +1,1 @@
-<div class="meal-plan-day" *ngFor="let day of days">{{ day.weekday }}</div>
+<app-meal-plan-day *ngFor="let day of days" [weekday]="day.weekday"></app-meal-plan-day>
