--- a/src/app/components/card/card.component.css
+++ b/src/app/components/card/card.component.css
@@ -1,8 +1,8 @@
 .card-container {
   align-items: center;
   backdrop-filter: blur(10px);
-  background-color: rgba(6, 22, 23, 0.4);
-  border-radius: 0.5rem;
+  background-color: var(--color-bg-primary);
+  border-radius: var(--border-radius-medium);
   display: flex;
   flex-direction: column;
   padding: 1rem;
