--- a/src/app/components/meal-plan/meal-plan.component.css
+++ b/src/app/components/meal-plan/meal-plan.component.css
@@ -1,12 +1,9 @@
 :host {
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    justify-content: space-between;
-    padding: 1rem;
-}
-
-.meal-plan-day {
-    height: 100%;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+  height: 100%;
+  justify-content: space-between;
+  padding: 1rem;
 }
