--- a/src/app/components/nav-menu/nav-menu.component.css
+++ b/src/app/components/nav-menu/nav-menu.component.css
@@ -12,7 +12,7 @@
 .nav-menu-container {
   align-items: center;
   backdrop-filter: blur(10px);
-  background-color: rgba(6, 22, 23, 0.4);
+  background-color: var(--color-bg-primary);
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -31,7 +31,7 @@ a {
     rgba(101, 140, 143, 0.4) 0%,
     rgba(6, 22, 23, 0) 100%
   );
-  border-radius: 5px;
+  border-radius: var(--border-radius-medium);
   box-shadow: 2px 2px 5px var(--color-glow-shadow),
     -1px -1px 5px var(--color-glow-gloss),
     0 0 4px var(--color-glow-ambient-narrow);
@@ -46,6 +46,7 @@ a.active {
   animation-duration: 3s;
   animation-iteration-count: infinite;
   animation-name: alive-glow;
+  animation-timing-function: linear;
   background: linear-gradient(
     45deg,
     rgba(79, 113, 116, 0.6) 0%,
