--- a/src/app/components/views/food/food.component.css
+++ b/src/app/components/views/food/food.component.css
@@ -1,5 +1,8 @@
 :host {
+  animation-duration: 0.3s;
+  animation-name: slide-in-page;
+  animation-timing-function: ease-in-out;
   backdrop-filter: blur(10px);
-  background-color: rgba(6, 22, 23, 0.4);
+  background-color: var(--color-bg-primary);
   width: 100%;
 }
