--- a/src/app/components/views/home/home.component.css
+++ b/src/app/components/views/home/home.component.css
@@ -1,9 +1,13 @@
 :host {
+  animation-duration: 0.3s;
+  animation-name: slide-in-page;
+  animation-timing-function: ease-in-out;
+  box-sizing: border-box;
   display: grid;
   gap: 1rem;
   grid-template: 1fr / repeat(3, 1fr);
   height: 100%;
-  margin-right: 1rem;
+  padding: 1rem 1rem 1rem 0;
   width: 100%;
 }
 
