--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,10 @@
+:root {
+  --color-bg-primary: rgba(6, 22, 23, 0.4);
+  --color-bg-secondary: rgba(30, 38, 39, 0.8);
+
+  --border-radius-medium: 0.5rem;
+}
+
 * {
   font-family: "Quicksand", sans-serif;
   color: white;
@@ -13,4 +20,14 @@ body {
   background: url("assets/marble.jpg");
   background-size: cover;
   margin: 0;
+}
+
+@keyframes slide-in-page {
+  from {
+    transform: translateY(-100%);
+  }
+
+  to {
+    transform: translateY(0);
+  }
 }
