feat(meal-card-selection-btn): improve styling

--- a/src/app/components/meal-card-selection-btn/meal-card-selection-btn.component.css
+++ b/src/app/components/meal-card-selection-btn/meal-card-selection-btn.component.css
@@ -4,6 +4,7 @@
   background-color: rgb(16, 40, 43);
   background-size: cover;
   border-radius: var(--border-radius-medium);
+  box-shadow: 3px 3px 10px var(--color-bg-secondary);
   display: flex;
   font-size: 1.75rem;
   height: 80%;
@@ -11,22 +12,26 @@
   position: relative;
   text-shadow: 1px 1px rgb(16, 40, 43), 1px 0px rgb(16, 40, 43),
     0px 1px rgb(16, 40, 43), 0px 0px rgb(16, 40, 43), -1px 0px rgb(16, 40, 43),
-    -1px -1px rgb(16, 40, 43), 0px -1px rgb(16, 40, 43), 0px 0px 10px rgb(16, 40, 43);
+    -1px -1px rgb(16, 40, 43), 0px -1px rgb(16, 40, 43),
+    0px 0px 10px rgb(16, 40, 43);
+  transition: transform ease-out 0.2s;
 }
 
 .meal-selection-btn-overlay {
-    background: linear-gradient(
-        -45deg,
-        rgba(16, 40, 43, 0.8) 0%,
-        rgba(16, 40, 43, 0) 100%
-      );
-      border-radius: var(--border-radius-medium);
-    position: absolute;
-    inset: 0;
+  background: linear-gradient(
+    -45deg,
+    rgba(16, 40, 43, 0.8) 0%,
+    rgba(16, 40, 43, 0) 100%
+  );
+  border-radius: var(--border-radius-medium);
+  inset: 0;
+  outline: 0.1rem solid rgb(255, 255, 255);
+  outline-offset: -0.75rem;
+  position: absolute;
 }
 
 .meal-selection-btn-title {
-    z-index: 1;
+  z-index: 1;
 }
 
 :host::after,
