--- a/src/app/components/views/food/food.component.html
+++ b/src/app/components/views/food/food.component.html
@@ -2,7 +2,9 @@
 <div class="food-actions">
   <app-meal-card-selection-btn
     cardTitle="Meals"
-    style="background-image: url('https://cdn.pixabay.com/photo/2016/12/26/17/28/spaghetti-1932466_1280.jpg')"
+    style="
+      background-image: url('https://cdn.pixabay.com/photo/2016/12/26/17/28/spaghetti-1932466_1280.jpg');
+    "
   ></app-meal-card-selection-btn>
   <app-meal-card-selection-btn
     cardTitle="Special"
