--- a/src/app/components/views/shoppinglist/shoppinglist.component.html
+++ b/src/app/components/views/shoppinglist/shoppinglist.component.html
@@ -1,1 +1,8 @@
 <h1>Shoppinglist view</h1>
+<app-card>
+    <ul *ngIf="list">
+        <li *ngFor="let item of list">
+            <h1><strong>{{ item.name }}</strong> - {{ item.details }}</h1>
+        </li>
+    </ul>
+</app-card>
