--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 :root {
   --color-bg-primary: rgba(6, 22, 23, 0.4);
   --color-bg-secondary: rgba(30, 38, 39, 0.8);
+  --color-bg-tertiary: rgb(16, 40, 43);
 
   --border-radius-medium: 0.5rem;
 }
@@ -20,6 +21,12 @@ body {
   background: url("assets/marble.jpg");
   background-size: cover;
   margin: 0;
+}
+
+button {
+  border: none;
+  cursor: pointer;
+  font-size: inherit;
 }
 
 @keyframes slide-in-page {
