--- a/src/styles.css
+++ b/src/styles.css
@@ -27,6 +27,24 @@ button {
   border: none;
   cursor: pointer;
   font-size: inherit;
+  padding: 0;
+}
+
+app-home,
+app-food,
+app-shopping-list {
+  animation-duration: 0.3s;
+  animation-name: slide-in-page;
+  animation-timing-function: ease-in-out;
+}
+
+app-food,
+app-shopping-list {
+  backdrop-filter: blur(10px);
+  background-color: var(--color-bg-primary);
+  box-sizing: border-box;
+  padding: 1rem;
+  width: 100%;
 }
 
 @keyframes slide-in-page {
