--- a/src/app/components/views/shopping-list/shopping-list.component.css
+++ b/src/app/components/views/shopping-list/shopping-list.component.css
@@ -1,9 +1,19 @@
+.shopping-list__content {
+  max-width: 30rem;
+}
+
+.shopping-list__lists {
+  /* horrible height hack tbh but i dont have the energy to chase down a better solution right now */
+  max-height: calc(100vh - 7rem);
+  overflow: auto;
+}
+
 ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
 
-li {
-  padding: 0.5rem;
+li:not(:last-child) {
+  border-bottom: 1px solid white;
 }
