--- a/src/app/components/views/shopping-list/shopping-list.component.html
+++ b/src/app/components/views/shopping-list/shopping-list.component.html
@@ -2,10 +2,17 @@
 
 <div *ngIf="!list">Loading...</div>
 
-<ng-container *ngIf="list">
+<div *ngIf="list" class="shopping-list__content">
   <input type="text" /> <button>Add</button>
 
-  <ul>
-    <li *ngFor="let item of list">{{ item.name }} - {{ item.details }}</li>
-  </ul>
-</ng-container>
+  <div class="shopping-list__lists">
+    <div *ngFor="let cat of list">
+      <h2>{{ cat.category }}</h2>
+      <ul>
+        <li *ngFor="let item of cat.items">
+          <app-shopping-list-item [item]="item"></app-shopping-list-item>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
