chore(shopping-list): tweak css

--- a/src/app/components/nav-menu/nav-menu.component.css
+++ b/src/app/components/nav-menu/nav-menu.component.css
@@ -1,11 +1,4 @@
 :host {
-  --color-glow-gloss: rgba(203, 216, 241, 0.4);
-  --color-glow-shadow: rgba(21, 33, 56, 0.4);
-  --color-glow-ambient-narrow: rgb(241, 227, 147);
-  --color-glow-ambient-wide: rgb(253, 207, 56);
-  --color-glow-spinning-narrow: rgb(226, 234, 248);
-  --color-glow-spinning-wide: rgba(243, 177, 34, 0.6);
-
   margin-right: 1rem;
 }
 
@@ -55,11 +48,7 @@ a.active {
 }
 
 a:not(.active):hover {
-  box-shadow: -1px -1px 5px var(--color-glow-gloss),
-    0 0 4px var(--color-glow-ambient-narrow),
-    -2px -2px 7px var(--color-glow-spinning-narrow),
-    0 0 7px var(--color-glow-ambient-wide),
-    2px 2px 10px var(--color-glow-spinning-wide);
+  box-shadow: var(--box-shadow-static-glow);
   background: linear-gradient(
     45deg,
     rgba(79, 113, 116, 0.6) 0%,
