--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,21 @@
   --color-bg-secondary: rgba(30, 38, 39, 0.8);
   --color-bg-tertiary: rgb(16, 40, 43);
 
+  --color-glow-gloss: rgba(203, 216, 241, 0.4);
+  --color-glow-shadow: rgba(21, 33, 56, 0.4);
+  --color-glow-ambient-narrow: rgb(241, 227, 147);
+  --color-glow-ambient-wide: rgb(253, 207, 56);
+  --color-glow-spinning-narrow: rgb(226, 234, 248);
+  --color-glow-spinning-wide: rgba(243, 177, 34, 0.6);
+
+  --border-radius-small: 0.25rem;
   --border-radius-medium: 0.5rem;
+
+  --box-shadow-static-glow: -1px -1px 5px var(--color-glow-gloss),
+    0 0 4px var(--color-glow-ambient-narrow),
+    -2px -2px 7px var(--color-glow-spinning-narrow),
+    0 0 7px var(--color-glow-ambient-wide),
+    2px 2px 10px var(--color-glow-spinning-wide);
 }
 
 * {
@@ -51,6 +65,17 @@ button {
   cursor: pointer;
   font-size: inherit;
   padding: 0;
+}
+
+input {
+  background-color: var(--color-bg-primary);
+  border: 1px solid var(--color-bg-tertiary);
+  border-radius: var(--border-radius-medium);
+  padding: 0.5rem;
+}
+
+input:focus {
+  box-shadow: var(--box-shadow-static-glow);
 }
 
 app-home,
