Add meal modals

--- a/src/app/components/meal-card-selection-btn/meal-card-selection-btn.component.html
+++ b/src/app/components/meal-card-selection-btn/meal-card-selection-btn.component.html
@@ -1,4 +1,6 @@
-<div class="meal-selection-btn-overlay"></div>
-<div class="meal-selection-btn-title">
-  {{ cardTitle }}
-</div>
+<button (click)="handleClick()">
+  <div class="meal-selection-btn-overlay"></div>
+  <div class="meal-selection-btn-title">
+    {{ cardTitle }}
+  </div>
+</button>
