--- a/src/app/components/meal-plan-meal/meal-plan-meal.component.html
+++ b/src/app/components/meal-plan-meal/meal-plan-meal.component.html
@@ -1,7 +1,7 @@
-<button class="meal-plan-meal">
-<div class="meal-plan-meal__title">{{ mealTitle }}</div>
+<button class="meal-plan-meal" (click)="handleClick()">
+<div class="meal-plan-meal__title">{{ meal.name }}</div>
 <div
   class="meal-plan-meal__img"
-  [style.background-image]="'url(' + mealBgImg + ')'"
+  [style.background-image]="'url(' + getFullImageURL() + ')'"
 ></div>
 </button>
