chore(food): rename food-modal to meal-selection-modal

--- a/src/app/components/views/food/food.component.html
+++ b/src/app/components/views/food/food.component.html
@@ -11,23 +11,27 @@
     cardTitle="Special"
     (clicked)="openFoodModal($event)"
   ></app-meal-card-selection-btn>
-  <app-meal-card-selection-btn 
-    cardTitle="Sides" 
-    (clicked)="openFoodModal($event)">
+  <app-meal-card-selection-btn
+    cardTitle="Sides"
+    (clicked)="openFoodModal($event)"
+  >
   </app-meal-card-selection-btn>
-  <app-meal-card-selection-btn 
-    cardTitle="Mains" 
-    (clicked)="openFoodModal($event)">
+  <app-meal-card-selection-btn
+    cardTitle="Mains"
+    (clicked)="openFoodModal($event)"
+  >
   </app-meal-card-selection-btn>
 </div>
-<app-food-modal 
-  *ngIf="openedModalName" 
-  [title]="openedModalName" 
+<app-meal-selection-modal
+  *ngIf="openedModalName"
+  [title]="openedModalName"
   (modalEditOpened)="openMealEditModal($event)"
-  (modalClosed)="closeFoodModal()">
-</app-food-modal>
+  (modalClosed)="closeFoodModal()"
+>
+</app-meal-selection-modal>
 <app-meal-edit-modal
   *ngIf="editingMeal"
   [meal]="editingMeal"
-  (modalClosed)="closeMealEditModal($event)">
+  (modalClosed)="closeMealEditModal($event)"
+>
 </app-meal-edit-modal>
