feat(food): style meal-selection-modal

--- a/src/app/components/meal-card-selection-btn/meal-card-selection-btn.component.css
+++ b/src/app/components/meal-card-selection-btn/meal-card-selection-btn.component.css
@@ -10,11 +10,16 @@
   height: 80%;
   justify-content: center;
   position: relative;
+  transition: transform ease-out 0.2s;
+}
+
+button {
+  background-color: transparent;
+  color: white;
   text-shadow: 1px 1px rgb(16, 40, 43), 1px 0px rgb(16, 40, 43),
     0px 1px rgb(16, 40, 43), 0px 0px rgb(16, 40, 43), -1px 0px rgb(16, 40, 43),
     -1px -1px rgb(16, 40, 43), 0px -1px rgb(16, 40, 43),
     0px 0px 10px rgb(16, 40, 43);
-  transition: transform ease-out 0.2s;
 }
 
 .meal-selection-btn-overlay {
@@ -31,6 +36,7 @@
 }
 
 .meal-selection-btn-title {
+  position: relative;
   z-index: 1;
 }
 
