--- a/src/app/components/meal-plan-meal/meal-plan-meal.component.css
+++ b/src/app/components/meal-plan-meal/meal-plan-meal.component.css
@@ -3,6 +3,7 @@
   background-color: var(--color-bg-tertiary);
   border-radius: var(--border-radius-medium);
   box-sizing: border-box;
+  box-shadow: var(--box-shadow-dim-glow);
   display: flex;
   height: 100%;
   justify-content: center;
@@ -12,14 +13,15 @@
     0px 1px rgb(16, 40, 43), 0px 0px rgb(16, 40, 43), -1px 0px rgb(16, 40, 43),
     -1px -1px rgb(16, 40, 43), 0px -1px rgb(16, 40, 43),
     0px 0px 10px rgb(16, 40, 43);
+  transition: box-shadow ease-out 0.1s;
   width: 100%;
 }
 
 .meal-plan-meal__img {
-  background-color: rgb(56, 92, 124);
+  background-color: rgb(76, 109, 96);
   background-position: right;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: 50%;
   border-radius: var(--border-radius-medium);
   clip-path: polygon(100% 0, 100% 0, 100% 100%, 50% 100%);
   inset: 0;
@@ -30,6 +32,10 @@
 
 .meal-plan-meal__title {
   z-index: 1;
+}
+
+.meal-plan-meal:hover {
+  box-shadow: var(--box-shadow-static-glow);
 }
 
 .meal-plan-meal:hover .meal-plan-meal__img {
