--- a/src/app/components/meal-selection-modal/meal-selection-modal.component.html
+++ b/src/app/components/meal-selection-modal/meal-selection-modal.component.html
@@ -1,22 +1,26 @@
 <div
   [class]="{
-    'meal-selection-modal': true,
-    'meal-selection-modal--closing': closing
+    'meal-selection-modal__wrapper': true,
+    'meal-selection-modal__wrapper--closing': closing
   }"
 >
   <button class="meal-selection-modal__close-btn" (click)="closeModal()">
     <img src="../../../assets/xmark-solid.svg" width="20" />
   </button>
   <h2 class="meal-selection-modal__title">{{ title }}</h2>
-  <div *ngIf="meals" class="meal-selection-modal__meals">
-    <app-meal-plan-meal
-      *ngFor="let meal of meals"
-      [meal]="meal"
-      (clicked)="openMealEditModal(meal)"
-    >
-    </app-meal-plan-meal>
-  </div>
-  <button class="meal-selection-modal__add-btn" (click)="openMealEditModal()">
-    <img src="../../../assets/plus-solid.svg" width="20" />
-  </button>
+  
+  <div *ngIf="!meals">Loading...</div>
+  <ng-container *ngIf="meals">
+    <div class="meal-selection-modal__meals">
+      <app-meal-plan-meal
+        *ngFor="let meal of meals"
+        [meal]="meal"
+        (clicked)="openMealEditModal(meal)"
+      >
+      </app-meal-plan-meal>
+    </div>
+    <button class="meal-selection-modal__add-btn" (click)="openMealEditModal()">
+      <img src="../../../assets/plus-solid.svg" width="20" />
+    </button>
+  </ng-container>
 </div>
