--- a/src/styles.css
+++ b/src/styles.css
@@ -76,7 +76,9 @@ input {
   background-color: var(--color-bg-primary);
   border: 1px solid var(--color-bg-tertiary);
   border-radius: var(--border-radius-medium);
+  font-size: 1rem;
   padding: 0.5rem;
+  transition: box-shadow ease-out 0.1s;
 }
 
 input:focus {
